Scanner UI to extract Profiling information from logs.